Add test cases on find command to support faculty and multifield search